--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,8 @@
 version: '0.1'
 
+volumes:
+    rest_torpeda_postgres_data
+
 networks:
     rest_torpeda:
         driver: bridge
@@ -15,6 +18,7 @@ services:
             POSTGRES_PASSWORD: ${DB_PASSWORD}
         volumes:
             - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+            - rest_torpeda_postgres_data:/var/lib/postgresql/data
         ports:
             - ${DB_HOST}:5432:5432
         networks:
