--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "bootstrap": "^4.6.2",
-    "bootstrap-vue": "^1.5.1",
     "node": "^25.2.1",
+    "normalize.css": "^8.0.1",
     "vue": "^3.5.24",
-    "vue-virtual-scroller": "^2.0.0-beta.8"
+    "vuestic-ui": "^1.10.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
